hello bangladehs add

--- a/class1/new.html
+++ b/class1/new.html
@@ -37,10 +37,10 @@
     <li>hello </li>
 </ul>
 <ul type="square">
-    <li>hello </li>
-    <li>hello </li>
-    <li>hello </li>
-    <li>hello </li>
+    <li>hello bangladesh how are you? </li>
+    <li>hello bangladesh how are you? </li>
+    <li>hello bangladesh how are you? </li>
+    <li>hello bangladesh how are you? </li>
 </ul>
 <ul type="circle">
     <li>hello </li>
