audio and video

--- a/class6/practice6.html
+++ b/class6/practice6.html
@@ -24,6 +24,16 @@
                       <button><i><b>Reset</b></i></button>
                       <button><i><b>Submit</b></i></button>
                      </form>
+
+
+                     <form action="">
+
+                        <label for="text">
+                            <input type="text" name="box">
+                            Enter Your name: 
+                        </label>
+
+                     </form>
            </fieldset> <br><br>
 
         
@@ -135,6 +145,7 @@
     </section>
     
 </div>
+
 
 </body>
 </html>
